# financial-org-backend

./: .gitignore  pyproject.toml  todo-list.txt
project/: settings.py
