[project]
name = "financial-org-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.7, <5.3",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
]
